fix selection page overflow issue

--- a/style/selection.css
+++ b/style/selection.css
@@ -10,7 +10,7 @@
   }
   .selector-panel .character {
     font-size: 50px;
-    margin: 80px;
+    margin: 0 80px;
     padding: 20px;
 
     display: flex;
